# bookmark-organizer

./: .gitignore  AGENT-NATIVE.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: default-taxonomy.json  sample-bookmarks.json
marketing/: jike.md  wechat-article.md  xiaohongshu.md
src/bookmark_organizer/: applier.py  bookmark_ops.py  chrome_adapter.py  cli.py  models.py  planner.py  taxonomy.py  utils.py  validator.py
tests/: test_bookmark_ops.py  test_cli.py  test_planner.py
